[SNAP-338] refactor launcher code into LauncherBase (#347)
Adding a faster launcher base in gemfire-shared that avoids dependencies on gemfire-core etc

## Changes proposed in this pull request

- refactored out the Status class and launcher code into a base "LauncherBase" class
  that avoids all main GemFire/GemFireXD core classes; this will be used on SnappyData
  for a quick launcher that minimizes class dependencies to cut down 2-3s of class loading
  time used by the current launcher itself
- re-arranged dependencies in gemfire-shared to keep only those required by launcher while
  rest (like trove) are either removed or marked as "compileOnly"
- fixed logger use so that Lead startup also uses the same configured log-file (rather
    than going to standard output redirected into the start_... file)
- use default max heap of 1G for locator to avoid it gobbling lot of memory
- fixed log4j initialization order to override completely with any configured
  conf/log4j.properties (and not merge with the defaults in store-log4j.properties)
- changed ".ser" file for status to ".stat" file since the serialization is no longer
  compatible with the old ".ser" file
- avoid printing stacktrace in start if status is RUNNING (SNAP-1645);
  instead return an error string that is printed on screen
- fixed an NPE in catalog due to delayed initialization
- adding GemFireStore.getExistingExternalCatalog() to wait for ExternalCatalog initialization
  if required and throw an exception instead of returning null; use this in most of the calls
  instead of getExternalCatalog() to obtain an instance of ExternalCatalog (except in places
      where null result is expected and handled)
- added just the "Distributed system now has XX members." message back to launcher
  (no listing of members)
- moving processing of "-sync" option in base LauncherBase class (for use by
    SnappyData's QuickLauncher)
- fixed FabricServerTest and MemoryAnalyticsTest as per the c